--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,18 @@
     margin: 0 10px;
 }
 
+.nav-link {
+    color: #333;
+    font-weight: bold;
+    transition: color 0.3s ease-in-out;
+}
+
+/* Offcanvas */
+
+#languageOffCanvasLabel {
+    font-size: 2rem;
+}
+
 #languageOffcanvas {
     max-width: 300px;
 }
@@ -57,6 +69,98 @@
 
 #languageOffcanvas .list-group-item:hover {
     background-color: #f0f0f0;
+}
+
+/* Offcanvas Button Styling */
+.btn-close {
+    background-color: transparent;
+    border: none;
+    font-size: 1.5rem;
+    color: #333;
+    opacity: 1;
+}
+
+.btn-close:hover {
+    color: #e60012;
+    transition: color 0.3s ease-in-out;
+}
+
+/* Offcanvas Header Styling */
+.offcanvas-header {
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #ddd;
+    padding: 1rem 1.5rem;
+}
+
+.offcanvas-header h5 {
+    font-family: 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    color: #333;
+    margin: 0;
+}
+
+/* Offcanvas Body Styling */
+.offcanvas-body {
+    background-color: #ffffff;
+    padding: 1.5rem;
+    font-family: 'Helvetica Neue', sans-serif;
+}
+
+.offcanvas-body .btn-link {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #333;
+    text-decoration: none;
+    padding: 0.5rem 0;
+    display: block;
+}
+
+.offcanvas-body .btn-link:hover {
+    color: #e60012;
+    text-decoration: underline;
+}
+
+/* Overall Offcanvas Styling */
+.offcanvas {
+    border-right: 1px solid #ddd;
+}
+
+/* Carousel */
+.text-overlay {
+    position: absolute;
+    font-family: Arial, sans-serif;
+    bottom: 7rem;
+    left: 8rem;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    color: #fff;
+}
+
+.text-overlay h5 {
+    font-size: 3rem;
+    margin: 5px 0;
+}
+
+.text-overlay p {
+    line-height: 1.5rem;
+    margin: 5px 0;
+}
+
+.price {
+    font-size: 2.5rem;
+    color: red;
+    font-weight: bold;
+    padding-top: 1rem;
+}
+.old-price {
+    font-size: 18px;
+    text-decoration: line-through;
+    color: #ccc;
+}
+
+.offer {
+    font-size: 14px;
+    color: #ffff;
+    margin-top: 10px;
 }
 
 /* New Arrivals Card */
