--- a/pages/page2/assets/css/style.css
+++ b/pages/page2/assets/css/style.css
@@ -134,18 +134,33 @@ html {
     padding: 20px;
 }
 
-.row {
-    display: grid;
-    grid-template-columns: 40% 60%;
-    gap: 1rem;
-    align-items: flex-start;
+.about .row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.about .col-lg-4 {
+    flex: 0 0 25%;
+    max-width: 25%;
+}
+
+.about .col-lg-8 {
+    flex: 0 0 75%;
+    max-width: 75%;
 }
 
 @media (max-width: 768px) {
-    .row {
-        grid-template-columns: 1fr;
+    .about .col-lg-4 {
+        flex: 0 0 30%;
+        max-width: 30%;
+    }
+
+    .about .col-lg-8 {
+        flex: 0 0 70%;
+        max-width: 70%;
     }
 }
+
 
 #navbar-example3 {
     border-right: 2px solid #e6e6e6;
