--- a/pages/page2/assets/css/style.css
+++ b/pages/page2/assets/css/style.css
@@ -3,6 +3,20 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    opacity: 0; /* Initially hide the body */
+    animation: fadeIn 1.0s ease-in forwards; /* 1.5s fade-in animation */
+}
+
+@keyframes fadeIn {
+    from {
+    opacity: 0;
+    }
+    to {
+    opacity: 1;
+    }
+}
+
 /* Navigation Bar */
 .navbar .container-fluid {
     display: flex;
@@ -184,6 +198,7 @@ html {
 #navbar-example3 {
     padding-top: 10px;
 }
+
 
 #about-uniqlo, #info {
     margin-bottom: 20px;
