--- a/pages/page3/assets/css/style.css
+++ b/pages/page3/assets/css/style.css
@@ -3,6 +3,20 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    opacity: 0; /* Initially hide the body */
+    animation: fadeIn 1.0s ease-in forwards; /* 1.5s fade-in animation */
+}
+
+@keyframes fadeIn {
+    from {
+    opacity: 0;
+    }
+    to {
+    opacity: 1;
+    }
+}
+
 /* Navigation Bar */
 .navbar .container-fluid {
     display: flex;
@@ -197,7 +211,7 @@ p {
 
 .modal-title {
     font-weight: bold;
-    color: #e60012;
+    color: #333;
 }
 
 @media (max-width: 768px) {
